# BoremoPrecios

./: BoremoPrecios.cpp  BoremoPrecios.h  BoremoPrecios.kdev4  CMakeLists.txt  LICENSE  README.md  main.cpp  utilities.h
barcodes/: prueba
items/: allitems
